# -ai-agent

./: .gitignore  README.md  pyproject.toml  start_aurora_web.bat
docs/: SYSTEM_ARCHITECTURE.md
src/ai_agent/: __init__.py  agent.py  chat.py  cli.py  config.py  llm.py  memory.py  models.py  planner.py  tools.py  utils.py
src/ai_agent/web/: __init__.py  app.py  system_ops.py
src/ai_agent/web/static/: app.js  index.html  styles.css
tests/: test_agent.py  test_chat_memory.py  test_llm_cache.py  test_planner.py  test_skills.py  test_tools.py  test_web_api.py
